# Matteo_thesis_workbook

./: Dockerfile  Load_data.py  PretrainedSP_load_points_video.py  README.md  SP_Pretrained_load_points.py  append_videos.py  camera_calibration_extraction.py  ev2converter.py  frames_to_events.py  generate_videos.py  load_points.py  mask.py  subplot_videos.py  video_speed_and_text.py
DSEC_evaluation/: DSEC_evaluation_matches_correctness.py  demo_superpoint.py  evaluate_DSEC.py
DSEC_evaluation_pytorch/: DSEC_evaluation_matches_correctness.py
DSEC_evaluation_pytorch/models/: matching.py  superglue.py  superpoint.py  utils.py
SCARF/log2vid/: log2vid.cpp
SCARF/rectification/: CMakeLists.txt  stereo_rectification.cpp
